[project]
name = "forecasting-research-directions-in-the-field-of-machine-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "kskon"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "boto3 (>=1.38.32,<2.0.0)",
    "jsonlines (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
